--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -13,7 +13,7 @@ In this guide, learn how to optimize SEO by managing lazy loading for custom sec
 
 ## Deciding when to lazy load
 
-Lazy loading can improve store performance and SEO, but it must be used strategically. Below, see a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
+Lazy loading can improve store performance and SEO, but it must be used strategically. Below, you will find a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
 
 ### When to use lazy loading? ✅
 
@@ -24,7 +24,7 @@ Lazy loading can improve store performance and SEO, but it must be used strategi
 
 By delaying the loading of these non-critical assets, the initial page load speed is significantly faster, allowing users to interact with the core content without delay.
 
-Example: A clothing store's homepage has "Seasonal Offers" promotional banners and lookbooks far down the page. Lazy loading these large images ensures shoppers see top-selling categories immediately, and the heavier promotional assets only load as they scroll.
+Example: A clothing store's homepage has "Seasonal Offers" promotional banners and lookbooks further down the page. Lazy loading these large images ensures shoppers see top-selling categories immediately, and the heavier promotional assets only load as they scroll.
 
 </details>
 
@@ -67,7 +67,7 @@ Example: Category pages like "Dresses" or "Jeans" may have hundreds of product i
 
 ### Update the `@faststore/cli` package
 
-Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions in [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ### Configure SEO for PLPs and PDPs
 
@@ -105,7 +105,7 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
    }
    ```
 
-3. To display PLP data (for example, collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook.
+3. To display PLP data (for example, collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use the [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook.
 
     <details>
     <summary>`usePLP()` hook</summary>
@@ -159,7 +159,7 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
-7. Search for a collection name to see the new section. For example, if you have a `Just arrived` collection, add its slug to the URL, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
+7. Search for a collection name to see the new section. For example, if you have a collection named "Just Arrived," you can view it by adding its slug to your store's URL (e.g., `https://mystore.vtex.app/just-arrived`). You’ll be able to see something similar to the following:
 
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
