--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -8,7 +8,7 @@ While lazy loading enhances performance, it may negatively impact SEO. Search en
 
 In this guide, learn how to optimize SEO by managing lazy loading for custom sections in FastStore.
 
-> ❗ Disabling lazy loading may increase initial page load time. Use it only when necessary.
+> ❗ Disabling lazy loading may increase initial page load time. Use this only when necessary.
 
 
 ## Deciding when to lazy load
@@ -24,7 +24,7 @@ Lazy loading can improve store performance and SEO, but it must be used strategi
 
 By delaying the loading of these non-critical assets, the initial page load speed is significantly faster, allowing users to interact with the core content without delay.
 
-Example: A clothing store's homepage has "Seasonal Offers" promotional banners and lookbooks further down the page. Lazy loading these large images ensures shoppers see top-selling categories immediately, and the heavier promotional assets only load as they scroll.
+Example: A clothing store's homepage has "Seasonal Offers" promotional banners and lookbooks further down the page. Lazy loading these large images ensures shoppers see top-selling categories immediately, while the heavier promotional assets only load as they scroll.
 
 </details>
 
@@ -67,7 +67,7 @@ Example: Category pages like "Dresses" or "Jeans" may have hundreds of product i
 
 ### Update the `@faststore/cli` package
 
-Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions in [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions in [Updating the `@faststore/cli` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ### Configure SEO for PLPs and PDPs
 
@@ -105,7 +105,7 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
    }
    ```
 
-3. To display PLP data (for example, collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use the [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook.
+3. To display PLP data (e.g., collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use the [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook.
 
     <details>
     <summary>`usePLP()` hook</summary>
@@ -159,14 +159,14 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
-7. Search for a collection name to see the new section. For example, if you have a collection named "Just Arrived," you can view it by adding its slug to your store's URL (e.g., `https://mystore.vtex.app/just-arrived`). You’ll be able to see something similar to the following:
+7. Search for a collection name to see the new section. For example, if you have a collection named "Just Arrived," you can view it by adding its slug to your store's URL (e.g., `https://mystore.vtex.app/just-arrived`). You will be able to see something similar to the following:
 
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
     <details>
       <summary>**PDP example**</summary>
       
-      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, we have the **New arrivals** title for the PDP.
+      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you can see the **New arrivals** title for the PDP.
 
       ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
     
@@ -182,7 +182,7 @@ To ensure that the custom section is present in the initial HTML response, follo
    > ℹ To focus only on the main HTML document, you can filter by **Doc** in the filter bar. This will show only the initial HTML request, making it easier to inspect the page's source code.
 
 3. Reload the page while the Developer Tools are open. This will capture all network requests made during the page load.
-4. In the **Name** column of the **Network** tab, look for the request corresponding to the page you're inspecting. In our example, `just-arrived`.
+4. In the **Name** column of the **Network** tab, look for the request corresponding to the page you are inspecting. In our example, `just-arrived`.
 5. Click the **Response** tab in this panel.
 6. If the section is in the initial HTML response, you will see the corresponding HTML code in the **Response** tab. For example:
 
