Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -182,7 +182,7 @@ To ensure that the custom section is present in the initial HTML response, follo
    > ℹ To focus only on the main HTML document, you can filter by **Doc** in the filter bar. This will show only the initial HTML request, making it easier to inspect the page's source code.
 
 3. Reload the page while the Developer Tools are open. This will capture all network requests made during the page load.
-4. In the **Name** column of the **Network** tab, look for the request corresponding to the page you are inspecting. In our example, `just-arrived`.
+4. In the **Name** column of the **Network** tab, look for the request corresponding to the page you are inspecting. In our example, this would be `just-arrived`.
 5. Click the **Response** tab in this panel.
 6. If the section is in the initial HTML response, you will see the corresponding HTML code in the **Response** tab. For example:
 
