Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -13,14 +13,14 @@ In this guide, learn how to optimize SEO by managing lazy loading for custom sec
 
 ## Deciding when to lazy load
 
-Lazy loading can improve store performance and SEO, but it must be used strategically. Below, you will find a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
+Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
 
 ### When to use lazy loading? ✅
 
 <CheckboxField label="The content is not immediately visible" id="checkboxfield-account" />
 
 <details>
-<summary>Lazy loading is ideal for content that appears below the fold—the part of a webpage that users have to scroll down to see.</summary>
+<summary>Lazy loading is ideal for content that appears below the fold—the part of a webpage that users must scroll down to see.</summary>
 
 By delaying the loading of these non-critical assets, the initial page load speed is significantly faster, allowing users to interact with the core content without delay.
 
@@ -67,7 +67,7 @@ Example: Category pages like "Dresses" or "Jeans" may have hundreds of product i
 
 ### Update the `@faststore/cli` package
 
-Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions in [Updating the `@faststore/cli` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+Make sure the `@faststore/cli` package is updated to the latest version. To update it, follow the instructions in [Updating the `@faststore/cli` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ### Configure SEO for PLPs and PDPs
 
@@ -159,14 +159,14 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
-7. Search for a collection name to see the new section. For example, if you have a collection named "Just Arrived," you can view it by adding its slug to your store's URL (e.g., `https://mystore.vtex.app/just-arrived`). You will be able to see something similar to the following:
+7. Search for a collection name to see the new section. For example, if you have a collection named "Just Arrived," you can view it by adding its slug to your store's URL (e.g., `https://mystore.vtex.app/just-arrived`). You will see something similar to the following:
 
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
     <details>
       <summary>**PDP example**</summary>
       
-      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you can see the **New arrivals** title for the PDP.
+      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you will see the **New arrivals** title on the PDP.
 
       ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
     
