--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -2,9 +2,9 @@
 title: "Optimizing SEO by managing lazy loading on PLPs and PDPs"
 ---
 
-By default, FastStore improves performance by wrapping store sections in `LazyLoadingSection` and `ViewportObserver` components. These components delay the loading of non-essential sections until they are needed, for example, when a user scrolls near it. This approach reduces initial page load times and enhances the user experience, especially on slower networks or devices.
+By default, FastStore improves performance by wrapping store sections in `LazyLoadingSection` and `ViewportObserver` components. These components delay the loading of non-essential sections until they are needed, for example, when a user scrolls near them. This approach reduces initial page load times and enhances the user experience, especially on slower networks or devices.
 
-While lazy loading enhances performance, it may negatively impact SEO. Search engine crawlers often don't execute JavaScript or wait for dynamically loaded content. Consequently, important sections like product grids on category pages might not be indexed. For example, if a user accesses the `gym clothes` collection, its product listing might not be returned in search results if not included in the initial HTML.
+While lazy loading enhances performance, it may negatively impact SEO. Search engine crawlers often don't execute JavaScript or wait for dynamically loaded content. Consequently, important sections like product grids on category pages might not be indexed. For example, if a user accesses the `gym clothes` collection, its product listing might not be returned in search results if the content is not included in the initial HTML.
 
 In this guide, learn how to optimize SEO by managing lazy loading for custom sections in FastStore.
 
@@ -13,7 +13,7 @@ In this guide, learn how to optimize SEO by managing lazy loading for custom sec
 
 ## Deciding when to lazy load
 
-Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
+Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to use lazy loading to balance fast page speed with search engine crawlability.
 
 ### When to use lazy loading? ✅
 
@@ -28,7 +28,7 @@ Example: A clothing store's homepage has "Seasonal Offers" promotional banners a
 
 </details>
 
-<CheckboxField label="The page speed needs to be improved" id="checkboxfield-account" />
+<CheckboxField label="Page speed needs to be improved" id="checkboxfield-account" />
 
 <details>
 <summary>Use lazy loading for deferred content that isn't essential for the initial view.</summary>
@@ -51,7 +51,7 @@ Example: A product page has a "Customer Gallery" with user-uploaded photos below
 Example: A store's homepage has a "Fashion Trends" slider in the footer with inspirational videos. Since this content doesn't impact structured product data for SEO, lazy loading it won't negatively affect search engine visibility.
 </details>
 
-<CheckboxField label="Balanced server load" id="checkboxfield-account" />
+<CheckboxField label="To balance server load" id="checkboxfield-account" />
 
 <details>
 <summary>Lazy loading helps manage server load on pages with many images or heavy resources, especially during high-traffic periods.</summary>
@@ -166,7 +166,7 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
     <details>
       <summary>**PDP example**</summary>
       
-      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you will see the **New arrivals** title on the PDP.
+      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the image below, you will see the **New arrivals** title on the PDP.
 
       ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
     
