--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -10,14 +10,17 @@ In this guide, learn how to optimize SEO by managing lazy loading for custom sec
 
 > ❗ Disabling lazy loading may increase initial page load time. Use this only when necessary.
 
-
 ## Deciding when to lazy load
 
 Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to use lazy loading to balance fast page speeds with search engine crawlability.
 
-### When to use lazy loading? ✅
+<details>
+<summary>When to use lazy loading? ✅</summary>
 
-<CheckboxField label="The content is not immediately visible" id="checkboxfield-account" />
+<CheckboxField
+  label="The content is not immediately visible"
+  id="checkboxfield-account"
+/>
 
 <details>
 <summary>Lazy loading is ideal for content that appears below the fold—the part of a webpage that users must scroll down to see.</summary>
@@ -28,7 +31,10 @@ Example: A clothing store's homepage has "Seasonal Offers" promotional banners a
 
 </details>
 
-<CheckboxField label="The page speed needs to be improved" id="checkboxfield-account" />
+<CheckboxField
+  label="The page speed needs to be improved"
+  id="checkboxfield-account"
+/>
 
 <details>
 <summary>Use lazy loading for deferred content that isn't essential for the initial view.</summary>
@@ -43,12 +49,16 @@ Example: A product page has a "Customer Gallery" with user-uploaded photos below
 
 </details>
 
-<CheckboxField label="The content doesn't affect SEO or crawling" id="checkboxfield-account" />
+<CheckboxField
+  label="The content doesn't affect SEO or crawling"
+  id="checkboxfield-account"
+/>
 
 <details>
 <summary>Lazy loading is suitable for content that does not contain structured product data or other critical SEO information.</summary>
 
 Example: A store's homepage has a "Fashion Trends" slider in the footer with inspirational videos. Since this content doesn't impact structured product data for SEO, lazy loading it won't negatively affect search engine visibility.
+
 </details>
 
 <CheckboxField label="Balanced server load" id="checkboxfield-account" />
@@ -59,7 +69,7 @@ Example: A store's homepage has a "Fashion Trends" slider in the footer with ins
 Example: Category pages like "Dresses" or "Jeans" may have hundreds of product image previews. With lazy loading, only the images visible above the fold load immediately, reducing server spikes and keeping the browsing experience fast.
 
 </details>
-
+</details>
 
 ## Before you begin
 
@@ -107,43 +117,43 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
 
 3. To display PLP data (e.g., collection names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook. For PDP data (e.g., product titles), use the [`usePDP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#hooks-for-consuming-api-extension-data) hook.
 
-    <details>
-    <summary>`usePLP()` hook</summary>
+   <details>
+<summary>`usePLP()` hook</summary>
 
-      ```tsx
-      import { usePLP } from '@faststore/core'
+   ```tsx
+   import { usePLP } from "@faststore/core";
 
-        export default function CustomPLPName() {
-          const context = usePLP()
+   export default function CustomPLPName() {
+     const context = usePLP();
 
-          return (
-            <section>
-              <h1>Testing - {context.data?.collection?.seo?.title ?? 'PLP'}!</h1>
-            </section>
-          )
-        }
-      ```
+     return (
+       <section>
+         <h1>Testing - {context.data?.collection?.seo?.title ?? "PLP"}!</h1>
+       </section>
+     );
+   }
+   ```
 
-    </details>
+   </details>
 
-    <details>
-    <summary>`usePDP()` hook</summary>
+   <details>
+<summary>`usePDP()` hook</summary>
 
-      ```tsx
-      import { usePDP } from '@faststore/core'
+   ```tsx
+   import { usePDP } from "@faststore/core";
 
-        export default function CustomPDPName() {
-          const context = usePDP()
+   export default function CustomPDPName() {
+     const context = usePDP();
 
-          return (
-            <section>
-              <h1>Testing - {context.data?.product?.seo?.title ?? 'PDP'}!</h1>
-            </section>
-          )
-        }
-      ```
+     return (
+       <section>
+         <h1>Testing - {context.data?.product?.seo?.title ?? "PDP"}!</h1>
+       </section>
+     );
+   }
+   ```
 
-    </details>
+   </details>
 
 ### Step 2: Sending the changes to the Headless CMS
 
@@ -151,7 +161,7 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
 2. Go to the VTEX Admin and access **Storefront > Headless CMS**.
 3. Access the **Product List Page** or **Product Details Page** Content Type. For this example, we'll use the **Product List Page** Content Type.
 
-    > ⚠ Repeat these steps for the **Product Details Page** Content Type if optimizing a PDP section.
+   > ⚠ Repeat these steps for the **Product Details Page** Content Type if optimizing a PDP section.
 
 4. Add the custom section you created. At the end of the section, you will notice the **Skip lazy loading** option.
 
@@ -164,12 +174,12 @@ FastStore lazy-loads sections to improve store performance. However, some [custo
    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
     <details>
-      <summary>**PDP example**</summary>
-      
-      For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you will see the **New arrivals** title on the PDP.
+   <summary>**PDP example**</summary>
+   
+   For PDPs, test with a product URL (e.g., `https://mystore.vtex.app/p/blue-shirt`). In the example below, you will see the **New arrivals** title on the PDP.
 
-      ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
-    
+   ![pdp-title-section](https://vtexhelp.vtexassets.com/assets/docs/src/pdp___01ad8375320cc80e565347e057927e97.png)
+
     </details>
 
 ### Step 3: Checking if the custom section is visible to search engines
