--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -12,18 +12,18 @@ In this guide, learn how to optimize SEO by managing lazy loading for custom sec
 
 ## Deciding when to lazy load
 
-Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to use lazy loading to balance fast page speed with search engine crawlability.
+Lazy loading can improve store performance and SEO, but it must be used strategically. Below is a checklist to help you decide when to implement lazy loading to balance fast page speed with search engine crawlability.
 
 <details>
 <summary>When to use lazy loading? ✅</summary>
 
 <CheckboxField
-  label="The content is not immediately visible"
+  label="To load content that isn't immediately visible"
   id="checkboxfield-account"
 />
 
 <details>
-<summary>Lazy loading is ideal for content that appears below the fold—the part of a webpage that users must scroll down to see.</summary>
+<summary>Use lazy loading for content that appears below the fold—the part of a webpage that users must scroll down to see.</summary>
 
 By delaying the loading of these non-critical assets, the initial page load speed is significantly faster, allowing users to interact with the core content without delay.
 
@@ -32,20 +32,16 @@ Example: A clothing store's homepage has "Seasonal Offers" promotional banners a
 </details>
 
 <CheckboxField
-  label="The page speed needs to be improved"
+  label="To improve page speed for a media-heavy page"
   id="checkboxfield-account"
 />
 
 <details>
-<summary>Use lazy loading for deferred content that isn't essential for the initial view.</summary>
+<summary>Use lazy loading for delay the content that isn't essential for the initial view.</summary>
 
 This optimizes resource usage and improves overall page speed.
 
 Example: A PDP includes a "Complete the Look" carousel at the bottom. Since these are supplementary suggestions, lazy loading ensures the main product details are prioritized, and the carousel images load only when the user scrolls to that section.
-
-Lazy loading is a great way to improve the initial page load speed for visitors, especially on media-heavy pages.
-
-Example: A product page has a "Customer Gallery" with user-uploaded photos below the main product pictures. Lazy loading these gallery images speeds up the initial PDP load, so customers see the core product information and main photos instantly.
 
 </details>
 
@@ -55,15 +51,19 @@ Example: A product page has a "Customer Gallery" with user-uploaded photos below
 />
 
 <details>
-<summary>Lazy loading is suitable for content that does not contain structured product data or other critical SEO information.</summary>
+<summary>Use lazy loading for content that isn't essential for search engine optimization.</summary>
+
+This includes content that doesn't contain structured product data or other critical SEO information.
 
 Example: A store's homepage has a "Fashion Trends" slider in the footer with inspirational videos. Since this content does not impact structured product data for SEO, lazy loading it will not negatively affect search engine visibility.
 </details>
 
-<CheckboxField label="To balance server load" id="checkboxfield-account" />
+<CheckboxField label="To balance server load during high traffic" id="checkboxfield-account" />
 
 <details>
-<summary>Lazy loading helps manage server load on pages with many images or heavy resources, especially during high-traffic periods.</summary>
+<summary>Use lazy loading to manage server load on pages with many images or heavy resources.</summary>
+
+This can prevent server spikes and ensure a faster browsing experience for shoppers.
 
 Example: Category pages like "Dresses" or "Jeans" may have hundreds of product image previews. With lazy loading, only the images visible above the fold load immediately, reducing server spikes and keeping the browsing experience fast.
 
